--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 Music Generator
-    java program that harmonizes chord progression based on a set of user defined rules
+    java program that harmonizes chord progression based on a set of 
+    user defined rules
+
     This repo contains two version of the project
 
 NOTE TO EMPLOYERS/ INTERESTED OTHERS:
